--- a/UI/MainWindow.axaml
+++ b/UI/MainWindow.axaml
@@ -3,7 +3,159 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="Featherline.MainWindow"
+        x:Class="Featherline.UI.MainWindow"
+        MinWidth="600" MinHeight="400"
+        Width="850" Height="500"
         Title="Featherline">
-    Welcome to Avalonia!
+
+    <DockPanel>
+        <!-- Menu bar -->
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Setup">
+                <MenuItem Header="Auto Set Info Template"/>
+                <MenuItem Header="Copy Info Template"/>
+                <MenuItem Header="Copy Info Logging Snippet"/>
+            </MenuItem>
+            <MenuItem Header="Settings">
+                <MenuItem Header="Genetic Algorithm">
+                    <MenuItem Header="{Binding Settings.Population, StringFormat=Population: {0}}" />
+                    <MenuItem Header="{Binding Settings.SurvivorCount, StringFormat=Generation Survivors: {0}}" />
+                    <MenuItem Header="{Binding Settings.MutationMagnitude, StringFormat=Mutation Magnitude: {0:F2}}" />
+                    <MenuItem Header="{Binding Settings.MaxMutChangeCount, StringFormat=Max Mutation Count: {0}}" />
+                </MenuItem>
+                <MenuItem Header="Computation">
+                    <MenuItem Command="{Binding ToggleBoolSetting}" CommandParameter="IgnoreHazards" Header="Don't Compute Hazards">
+                        <MenuItem.Icon>
+                            <CheckBox IsChecked="{Binding Settings.IgnoreHazards}" ClipToBounds="false"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Command="{Binding ToggleBoolSetting}" CommandParameter="IgnoreCollision" Header="Don't Compute Walls or Colliders">
+                        <MenuItem.Icon>
+                            <CheckBox IsChecked="{Binding Settings.IgnoreCollision}" ClipToBounds="false"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
+                <MenuItem Header="Algorithm Mode">
+                    <MenuItem Command="{Binding ToggleBoolSetting}" CommandParameter="FrameBasedOnly" Header="Frame Genes Only">
+                        <MenuItem.Icon>
+                            <CheckBox IsChecked="{Binding Settings.FrameBasedOnly}" ClipToBounds="false"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Command="{Binding ToggleBoolSetting}" CommandParameter="AvoidWalls" Header="Disallow Wall Collision">
+                        <MenuItem.Icon>
+                            <CheckBox IsChecked="{Binding Settings.AvoidWalls}" ClipToBounds="false"/>
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
+                <MenuItem Header="{Binding Settings.MaxThreadCount, StringFormat=Simulation Thread Count: {0}}" />
+            </MenuItem>
+            <MenuItem Header="Help" />
+            <MenuItem Header="Debug">
+                <!-- <MenuItem Command="{Binding ToggleBoolSetting}" CommandParameter="LogResults" Header="Log flight of initial inputs" >
+                    <MenuItem.Icon>
+                        <CheckBox IsChecked="{Binding Settings.LogResults}" ClipToBounds="false"/>
+                    </MenuItem.Icon>
+                </MenuItem> -->
+                <MenuItem Command="{Binding ToggleBoolSetting}" CommandParameter="LogResults" Header="Log Algorithm Results" >
+                    <MenuItem.Icon>
+                        <CheckBox IsChecked="{Binding Settings.LogResults}" ClipToBounds="false"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+            </MenuItem>
+        </Menu>
+
+        <!-- Main area -->
+        <Grid RowDefinitions="50,*" ColumnDefinitions="*,200">
+            <!-- Tool bar -->
+            <Grid ColumnDefinitions="Auto,Auto,*" Grid.Row="0" Grid.Column="0">
+                <Grid.Styles>
+                    <Style Selector="Button.btn-green">
+                        <Setter Property="Background" Value="#5FAB32"/>
+                    </Style>
+                    <Style Selector="Button.btn-green:pointerover/template/ContentPresenter#PART_ContentPresenter">
+                        <Setter Property="Background" Value="#72C741"/>
+                    </Style>
+                    <Style Selector="Button.btn-green:pressed/template/ContentPresenter#PART_ContentPresenter">
+                        <Setter Property="Background" Value="#8BE951"/>
+                    </Style>
+                    <Style Selector="Button.btn-red">
+                        <Setter Property="Background" Value="#D33823"/>
+                    </Style>
+                    <Style Selector="Button.btn-red:pointerover/template/ContentPresenter#PART_ContentPresenter">
+                        <Setter Property="Background" Value="#DD4936"/>
+                    </Style>
+                    <Style Selector="Button.btn-red:pressed/template/ContentPresenter#PART_ContentPresenter">
+                        <Setter Property="Background" Value="#ED7060"/>
+                    </Style>
+                </Grid.Styles>
+
+                <Button Command="{Binding ToggleAlgorithm}" 
+                        Width="150" HorizontalAlignment="Stretch" 
+                        Grid.Column="0" Margin="10" 
+                        IsVisible="{Binding !AlgorithmRunning}" 
+                        IsEnabled="{Binding !AlgorithmClosing}" 
+                        Classes="btn-green">
+                    <TextBlock HorizontalAlignment="Center">Run Algorithm</TextBlock>
+                </Button>
+                <Button Command="{Binding ToggleAlgorithm}" 
+                        Width="150" HorizontalAlignment="Stretch" 
+                        Grid.Column="0" Margin="10" 
+                        IsVisible="{Binding AlgorithmRunning}" 
+                        IsEnabled="{Binding !AlgorithmClosing}" 
+                        Classes="btn-red">
+                    <TextBlock HorizontalAlignment="Center">Abort Algorithm</TextBlock>
+                </Button>
+
+                <Button Grid.Column="1" Margin="10">Select Information Source File</Button>
+                <TextBox Text="{Binding Settings.InfoFile}" Grid.Column="2" Margin="10" Height="30"></TextBox>
+            </Grid>
+
+            <!-- Side bar -->
+            <Grid Margin="15" RowDefinitions="*,*,*,*,*" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
+                <StackPanel Grid.Row="0">
+                    <Label>Generations</Label>
+                    <NumericUpDown Value="{Binding Settings.Generations}" Minimum="0" Maximum="999999"/>
+                </StackPanel>
+                <StackPanel Grid.Row="1">
+                    <Label>Max Framecount</Label>
+                    <NumericUpDown Value="{Binding Settings.Framecount}" Minimum="1" Maximum="9999"/>
+                </StackPanel>
+                <StackPanel Grid.Row="2">
+                    <Label>Gens Per Tested Timing</Label>
+                    <NumericUpDown Value="{Binding Settings.GensPerTiming}" Minimum="1" Maximum="999999"/>
+                </StackPanel>
+                <StackPanel Grid.Row="3">
+                    <Label>Timing Shuffle Count</Label>
+                    <NumericUpDown Value="{Binding Settings.ShuffleCount}" Minimum="0" Maximum="100"/>
+                </StackPanel>
+
+                <Grid ColumnDefinitions="Auto,*" Grid.Row="4">
+                    <CheckBox VerticalAlignment="Center" Grid.Column="0"/>
+                    <TextBlock VerticalAlignment="Center" Grid.Column="1" Text="Test Timing On Initial Inputs Directly" TextWrapping="Wrap"/>
+                </Grid>
+            </Grid>
+
+            <!-- Input fields -->
+            <Grid RowDefinitions="Auto,*" ColumnDefinitions="*,*,*" Grid.Row="1" Grid.Column="0">
+                <Grid.Styles>
+                    <Style Selector="TextBlock,TextBox">
+                        <Setter Property="Margin" Value="10,0,10,10" />
+                    </Style>
+                    <Style Selector="TextBlock">
+                        <Setter Property="HorizontalAlignment" Value="Center" />
+                        <Setter Property="VerticalAlignment" Value="Center" />
+                        <Setter Property="TextWrapping" Value="Wrap" />
+                    </Style>
+                </Grid.Styles>
+
+                <TextBlock Grid.Row="0" Grid.Column="0">Feather Checkpoints</TextBlock>
+                <TextBox Text="{Binding Settings.Checkpoints}" AcceptsReturn="True" Grid.Row="1" Grid.Column="0"></TextBox>
+                <TextBlock Grid.Row="0" Grid.Column="1">(Optional) Initial Inputs</TextBlock>
+                <TextBox Text="{Binding Settings.Favorite}" Grid.Row="1" Grid.Column="1"></TextBox>
+                <TextBlock Grid.Row="0" Grid.Column="2">Custom Killboxes and Colliders</TextBlock>
+                <TextBox Text="{Binding Settings.ManualHitboxes}" Grid.Row="1" Grid.Column="2"></TextBox>
+            </Grid>
+        </Grid>
+
+    </DockPanel>
 </Window>
