--- a/UI/MainWindow.axaml
+++ b/UI/MainWindow.axaml
@@ -2,10 +2,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="850" d:DesignHeight="500"
         x:Class="Featherline.UI.MainWindow"
         WindowStartupLocation="CenterScreen"
-        MinWidth="600" MinHeight="400"
+        MinWidth="850" MinHeight="500"
         Width="850" Height="500"
         Title="Featherline">
 
@@ -86,7 +86,7 @@
                     <TextBlock HorizontalAlignment="Center">Abort Algorithm</TextBlock>
                 </Button>
 
-                <Button Grid.Column="1" Margin="10">Select Information Source File</Button>
+                <Button Command="{Binding SelectInfodumpFile}" Grid.Column="1" Margin="10">Select Information Source File</Button>
                 <TextBox Text="{Binding Settings.InfoFile}" Grid.Column="2" Margin="10" Height="30"></TextBox>
             </Grid>
 
