Added clipboard copying

--- a/UI/MainWindow.axaml
+++ b/UI/MainWindow.axaml
@@ -14,9 +14,9 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Setup">
                 <MenuItem Command="{Binding AutoSetInfoTemplate}" IsEnabled="{Binding !UsesCustomInfoTemplate}" Header="Auto Set Info Template"/>
-                <MenuItem Command="{Binding RestoreOriginalInfoTemplate}" IsEnabled="{Binding  UsesCustomInfoTemplate}" Header="Restore Original Info Template"/>
-                <MenuItem Header="Copy Info Template"/>
-                <MenuItem Header="Copy Info Logging Snippet"/>
+                <MenuItem Command="{Binding RestoreOriginalInfoTemplate}" IsEnabled="{Binding UsesCustomInfoTemplate}" Header="Restore Original Info Template"/>
+                <MenuItem Command="{Binding CopyInfoTemplate}" Header="Copy Info Template"/>
+                <MenuItem Command="{Binding CopyInfoLoggingSnippet}" Header="Copy Info Logging Snippet"/>
             </MenuItem>
             <MenuItem Header="Settings">
                 <MenuItem Header="Genetic Algorithm">
